Updated contact section: dark mode layout with form left and contact info right

--- a/index.html
+++ b/index.html
@@ -545,56 +545,7 @@ Our certified NYC IT consultants provide 24/7 support, same-day onsite service w
 
   
 
-  <!-- Pricing / Plans -->
-  <section id="pricing">
-    <div class="container">
-      <div class="section-head">
-        <h2>Simple, Transparent Plans</h2>
-        <p>Per‑user pricing with no surprises. Mix and match services to fit your team.</p>
-      </div>
-      <div class="pricing">
-        <div class="price-card">
-          <h3>Essential</h3>
-          <p class="muted">For small teams getting started</p>
-          <div class="price">$49<span style="font-size:14px;color:var(--muted)">/user/mo</span></div>
-          <ul class="features">
-            <li>
-              <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" aria-hidden="true"><path d="M20 6L9 17l-5-5"/></svg>
-              Helpdesk 8×5 & remote support
-            </li>
-            <li><svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M20 6L9 17l-5-5"/></svg> Patch & asset management</li>
-            <li><svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M20 6L9 17l-5-5"/></svg> AV + email security baseline</li>
-          </ul>
-          <a class="cta" href="#contact">Choose Essential</a>
-        </div>
-        <div class="price-card" style="border-color:rgba(124,92,255,.4)">
-          <span class="ribbon">Most Popular</span>
-          <h3>Professional</h3>
-          <p class="muted">For growing teams that need 24/7</p>
-          <div class="price">$79<span style="font-size:14px;color:var(--muted)">/user/mo</span></div>
-          <ul class="features">
-            <li><svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M20 6L9 17l-5-5"/></svg> 24/7 helpdesk & on‑call</li>
-            <li><svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M20 6L9 17l-5-5"/></svg> EDR + SOC monitoring</li>
-            <li><svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M20 6L9 17l-5-5"/></svg> M365/Azure management</li>
-            <li><svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M20 6L9 17l-5-5"/></svg> Quarterly vCIO strategy</li>
-          </ul>
-          <a class="cta" href="#contact">Choose Professional</a>
-        </div>
-        <div class="price-card">
-          <h3>Enterprise</h3>
-          <p class="muted">For advanced security & compliance</p>
-          <div class="price">Custom</div>
-          <ul class="features">
-            <li><svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M20 6L9 17l-5-5"/></svg> SIEM/XDR + MDR</li>
-            <li><svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M20 6L9 17l-5-5"/></svg> Compliance (HIPAA, PCI, SOC 2)</li>
-            <li><svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M20 6L9 17l-5-5"/></svg> DR testing & BCP workshops</li>
-            <li><svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M20 6L9 17l-5-5"/></svg> Dedicated TAM & vCISO</li>
-          </ul>
-          <a class="cta" href="#contact">Talk to Sales</a>
-        </div>
-      </div>
-    </div>
-  </section>
+  
 
   <!-- Testimonials -->
   <section id="testimonials">
@@ -629,65 +580,88 @@ Our certified NYC IT consultants provide 24/7 support, same-day onsite service w
     </div>
   </section>
 
-  <!-- Contact -->
-  <section id="contact">
-    <div class="container">
-      <div class="section-head">
-        <h2>Get Your Free IT Assessment</h2>
-        <p>Tell us about your environment and goals. We’ll follow up with a tailored plan and pricing.</p>
-      </div>
-      <div class="grid cols-3">
-        <div class="card" style="grid-column:span 2">
-          <form action="#" method="post" onsubmit="event.preventDefault(); alert('Thanks! We will contact you shortly.');">
-            <div class="row">
-              <div>
-                <label for="name">Full Name</label>
-                <input id="name" name="name" type="text" placeholder="Jane Doe" required>
-              </div>
-              <div>
-                <label for="email">Work Email</label>
-                <input id="email" name="email" type="email" placeholder="you@company.com" required>
-              </div>
-            </div>
-            <div class="row">
-              <div>
-                <label for="phone">Phone</label>
-                <input id="phone" name="phone" type="tel" placeholder="(212) 555‑0199">
-              </div>
-              <div>
-                <label for="users">Team Size</label>
-                <select id="users" name="users">
-                  <option value="1-10">1–10</option>
-                  <option value="11-25">11–25</option>
-                  <option value="26-50">26–50</option>
-                  <option value="51-100">51–100</option>
-                  <option value=">100">100+</option>
-                </select>
-              </div>
-            </div>
-            <div>
-              <label for="message">What do you need help with?</label>
-              <textarea id="message" name="message" placeholder="Tell us about your environment, challenges, and timelines…" required></textarea>
-            </div>
-            <button class="submit" type="submit">Request Assessment</button>
-            <p class="muted" style="margin:6px 0 0">By submitting, you agree to our <a href="#">Privacy Policy</a>.</p>
-          </form>
-        </div>
-        <aside class="card">
-          <h3>Contact</h3>
-          <p class="muted">Mon–Fri 8am–7pm, 24/7 on‑call</p>
-          <p>📞  (877) 608-8647<br>✉️ hello@manageditnyc.com<br>📍 Manhattan, NY</p>
-          <hr style="border-color:rgba(255,255,255,.08)" />
-          <h3>Why choose us?</h3>
-          <ul class="features">
-            <li><svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M20 6L9 17l-5-5"/></svg> 15‑minute average response</li>
-            <li><svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M20 6L9 17l-5-5"/></svg> Flat, predictable billing</li>
-            <li><svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M20 6L9 17l-5-5"/></svg> Dedicated TAM / vCIO</li>
-          </ul>
-        </aside>
-      </div>
+
+
+
+
+<!-- Contact -->
+<section id="contact" style="background:#0b1c28; padding:60px 20px; border-radius:12px; box-shadow:0 8px 24px rgba(0,0,0,.4); margin:60px auto; color:#fff;">
+  <div class="container" style="max-width:1100px; margin:0 auto;">
+    <div class="section-head" style="text-align:center; margin-bottom:32px;">
+      <h2 style="color:#00bcd4; font-size:32px; margin-bottom:12px;">Talk to Sales</h2>
+      <p style="color:#9ca3af; font-size:16px;">Tell us about your environment and goals. We’ll follow up with a tailored plan and pricing.</p>
     </div>
-  </section>
+
+    <!-- Grid Layout -->
+    <div style="display:grid; grid-template-columns:2fr 1fr; gap:24px; align-items:start;">
+
+      <!-- Contact Form (Left) -->
+      <div style="background:#132836; padding:24px; border-radius:12px; border:1px solid rgba(255,255,255,.1); box-shadow:0 6px 16px rgba(0,0,0,.3);">
+        <form action="#" method="post" onsubmit="event.preventDefault(); alert('Thanks! We will contact you shortly.');">
+          <div style="display:flex; gap:16px; flex-wrap:wrap; margin-bottom:16px;">
+            <div style="flex:1; min-width:250px;">
+              <label for="name" style="display:block; margin-bottom:6px; color:#fff;">Full Name</label>
+              <input id="name" name="name" type="text" placeholder="Jane Doe" required
+                style="width:100%; padding:12px; background:#0f202e; color:#fff; border:1px solid rgba(255,255,255,.15); border-radius:8px;">
+            </div>
+            <div style="flex:1; min-width:250px;">
+              <label for="email" style="display:block; margin-bottom:6px; color:#fff;">Work Email</label>
+              <input id="email" name="email" type="email" placeholder="you@company.com" required
+                style="width:100%; padding:12px; background:#0f202e; color:#fff; border:1px solid rgba(255,255,255,.15); border-radius:8px;">
+            </div>
+          </div>
+
+          <div style="display:flex; gap:16px; flex-wrap:wrap; margin-bottom:16px;">
+            <div style="flex:1; min-width:250px;">
+              <label for="phone" style="display:block; margin-bottom:6px; color:#fff;">Phone</label>
+              <input id="phone" name="phone" type="tel" placeholder="(212) 555-0199"
+                style="width:100%; padding:12px; background:#0f202e; color:#fff; border:1px solid rgba(255,255,255,.15); border-radius:8px;">
+            </div>
+            <div style="flex:1; min-width:250px;">
+              <label for="users" style="display:block; margin-bottom:6px; color:#fff;">Team Size</label>
+              <select id="users" name="users"
+                style="width:100%; padding:12px; background:#0f202e; color:#fff; border:1px solid rgba(255,255,255,.15); border-radius:8px;">
+                <option value="1-10">1–10</option>
+                <option value="11-25">11–25</option>
+                <option value="26-50">26–50</option>
+                <option value="51-100">51–100</option>
+                <option value=">100">100+</option>
+              </select>
+            </div>
+          </div>
+
+          <div style="margin-bottom:16px;">
+            <label for="message" style="display:block; margin-bottom:6px; color:#fff;">What do you need help with?</label>
+            <textarea id="message" name="message" placeholder="Tell us about your environment, challenges, and timelines…" required
+              style="width:100%; min-height:120px; padding:12px; background:#0f202e; color:#fff; border:1px solid rgba(255,255,255,.15); border-radius:8px;"></textarea>
+          </div>
+
+          <button type="submit"
+            style="background:linear-gradient(90deg,#00bcd4,#14f1ff); color:#07131b; font-weight:700; padding:14px 20px; border:none; border-radius:8px; font-size:16px; cursor:pointer; width:100%; transition:all .3s ease;">
+            Request Assessment
+          </button>
+          <p style="margin:8px 0 0; font-size:14px; color:#9ca3af;">By submitting, you agree to our <a href="#" style="color:#00bcd4; text-decoration:none;">Privacy Policy</a>.</p>
+        </form>
+      </div>
+
+      <!-- Sidebar Contact Info (Right) -->
+      <aside style="background:#132836; padding:24px; border-radius:12px; border:1px solid rgba(255,255,255,.1); color:#fff; box-shadow:0 6px 16px rgba(0,0,0,.3);">
+        <h3 style="color:#00bcd4; margin-bottom:8px;">Contact</h3>
+        <p style="color:#9ca3af; margin-bottom:12px;">Mon–Fri 8am–7pm, 24/7 on-call</p>
+        <p style="margin-bottom:16px;">📞 (877) 608-8647<br>✉️ hello@manageditnyc.com<br>📍 Manhattan, NY</p>
+        <hr style="border-color:rgba(255,255,255,.08); margin:16px 0;" />
+        <h3 style="color:#00bcd4; margin-bottom:8px;">Why choose us?</h3>
+        <ul style="list-style:none; padding:0; margin:0;">
+          <li style="margin-bottom:8px;">✅ 15-minute average response</li>
+          <li style="margin-bottom:8px;">✅ Flat, predictable billing</li>
+          <li style="margin-bottom:8px;">✅ Dedicated TAM / vCIO</li>
+        </ul>
+      </aside>
+
+    </div>
+  </div>
+</section>
+
 
   <footer>
     <div class="container">
